# T3NS

./: .gitignore  CMakeLists.txt  COPYING  README.md  TODO
cmake/Modules/: FindMKL.cmake
examples/: 10_T3NS.netw  template.in
examples/Ru_ph/: Ru_ph_ph_ph.xyz  doci.out  doci.py
include/: Heff.h  RedDM.h  T3NSConfig.h.in  Wigner.h  bookkeeper.h  davidson.h  debug.h  hamiltonian.h  hamiltonian_doci.h  hamiltonian_nn_hubbard.h  hamiltonian_qc.h  instructions.h  instructions_doci.h  instructions_nn_hubbard.h  instructions_qc.h  io.h  io_to_disk.h  lapack.h  macros.h  network.h  opType.h  operators.h  ops_type.h  optScheme.h  optimize_network.h  options.h  qcH.h  rOperators.h  renormalizedops.h  siteTensor.h  sort.h  sparseblocks.h  stensor.h  symmetries.h  symmetry_pg.h  symmetry_su2.h  symmetry_u1.h  symmetry_z2.h  symsecs.h  tensorproducts.h  (+2 more)
python/: test.py
python/pyT3NS/: bookkeeper.py  c_stdout_filter.py  netw.py  t3ns.py  tensors.py
scripts/: HeisenbergFDump.py  extract_network.sh  instruction_check.sh  makenetwork.py  optimizenetwork.py  readFCIDUMP.py
src/: CMakeLists.txt  Doxyfile.in  Heff.c  Heffbranching.c  P_update_rops.c  RedDM.c  Wigner.c  bookkeeper.c  davidson.c  decompose_stensor.c  executable.c  fixed_charge.patch  hamiltonian.c  hamiltonian_doci.c  hamiltonian_nn_hubbard.c  hamiltonian_qc.c  init_stensor.c  instructions.c  instructions_doci.c  instructions_nn_hubbard.c  instructions_qc.c  io.c  io_to_disk.c  macros.c  misc_stensor.c  network.c  opType.c  opType_qc.c  operators.c  ops_type.c  optScheme.c  optimize_network.c  qcH.c  rOperators_bUpdate.c  rOperators_init.c  rOperators_initNEW.c  rOperators_misc.c  rOperators_pUpdate.c  rOperators_pUpdateNEW.c  renormalizedops.c  (+16 more)
tests/: CMakeLists.txt  LiF.in  LiFDMRG.netw  N2.CCPVDZ.TREE.netw  error  template.in  template.netw  templateDMRG.netw  templateDMRG12.netw  templateDMRG3.netw  templateT3NS3.netw  templateT3NS45.netw  templateT3NSstar.netw  test1.c.in  test2  test2.c.in  test3.c.in  test4.c.in  test5.c.in
tests/fcidumps/: Cu2O2bisoxo.FCIDUMP  Cu2O2peroxo.FCIDUMP  LiF_3.05.FCIDUMP  N2_STO3G_113.FCIDUMP  N2_STO3G_120.FCIDUMP
tests/networks/: 10_DMRG.netw  10_T3NS.netw  28_DMRG.netw  28_T3NS.netw  45_T3NS.netw  bisoxo.netw  lif_T3NS.netw
